--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,3 +1,51 @@
+:root {
+  --color-teched-midnight: 63 16 70;
+  --color-teched-sand: 247 239 227;
+  --color-teched-green: 43 216 114;
+  --color-teched-blue: 55 188 255;
+  --color-teched-pink: 255 82 146;
+  --color-teched-purple: 198 122 255;
+  --color-teched-yellow: 255 197 64;
+  --color-teched-orange: 250 118 65;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+}
+
+nav a {
+  color: white;
+  font-weight: 300;
+  text-decoration: none;
+
+  padding: 0.3em 1.5em;
+  margin: 0.5em;
+  border-radius: 2em;
+}
+
+a.active {
+  color: rgb(var(--color-teched-midnight));
+
+  box-shadow: 0px 0px 5px rgb(var(--color-teched-orange));
+  background-color: rgb(var(--color-teched-orange) / 0.8);
+  font-weight: 400;
+}
+a:hover {
+  color: rgb(var(--color-teched-midnight));
+  background-color: rgb(var(--color-teched-green) / 0.8);
+  box-shadow: 0px 0px 5px rgb(var(--color-teched-green));
+}
+a:active {
+  color: rgb(var(--color-teched-midnight));
+  background-color: rgb(var(--color-teched-sand) / 0.8);
+  box-shadow: 0px 0px 5px rgb(var(--color-teched-sand));
+}
+
 img {
   width: 200px;
 }
