--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,7 +39,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   width: 100vw;
+  height: 100vh;
 }
 
 /* --- --- --- --- --- --- --- ---  */
