--- a/client/src/pages/submitpage.css
+++ b/client/src/pages/submitpage.css
@@ -3,3 +3,42 @@ form {
   flex-direction: column;
   gap: 1em;
 }
+
+.submit-page-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+}
+
+.submit-page-info hr {
+  width: 80%;
+}
+
+.submit-page-button {
+  color: rgb(var(--color-teched-midnight));
+  background-color: rgb(var(--color-teched-green));
+
+  font-size: 1em;
+  text-decoration: none;
+  text-align: center;
+
+  padding: 0.3em 1.5em;
+  margin: 0.5em;
+  border-radius: 2em;
+  border: none;
+  width: 10em;
+
+  cursor: pointer;
+}
+
+.submit-page-button:hover {
+  color: rgb(var(--color-teched-midnight));
+  background-color: rgb(var(--color-teched-green) / 0.8);
+  box-shadow: 0px 0px 5px rgb(var(--color-teched-green));
+}
+.submit-page-button:active {
+  color: rgb(var(--color-teched-midnight));
+  background-color: rgb(var(--color-teched-sand) / 0.8);
+  box-shadow: 0px 0px 5px rgb(var(--color-teched-sand));
+}
