--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -1,14 +1,3 @@
-:root {
-  --color-teched-midnight: 63 16 70;
-  --color-teched-sand: 247 239 227;
-  --color-teched-green: 43 216 114;
-  --color-teched-blue: 55 188 255;
-  --color-teched-pink: 255 82 146;
-  --color-teched-purple: 198 122 255;
-  --color-teched-yellow: 255 197 64;
-  --color-teched-orange: 250 118 65;
-}
-
 header {
   display: flex;
   flex-direction: row;
@@ -29,10 +18,10 @@ nav a {
 }
 
 a.active {
-  color: rgb(var(--color-teched-midnight));
+  color: rgb(var(--color-teched-sand));
 
   box-shadow: 0px 0px 5px rgb(var(--color-teched-orange));
-  background-color: rgb(var(--color-teched-orange) / 0.8);
+  background-color: rgb(var(--color-teched-orange) / 0.5);
   font-weight: 400;
 }
 a:hover {
