--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -17,19 +17,19 @@ nav a {
   border-radius: 2em;
 }
 
-a.active {
+nav a.active {
   color: rgb(var(--color-teched-sand));
 
   box-shadow: 0px 0px 5px rgb(var(--color-teched-orange));
   background-color: rgb(var(--color-teched-orange) / 0.5);
   font-weight: 400;
 }
-a:hover {
+nav a:hover {
   color: rgb(var(--color-teched-midnight));
   background-color: rgb(var(--color-teched-green) / 0.8);
   box-shadow: 0px 0px 5px rgb(var(--color-teched-green));
 }
-a:active {
+nav a:active {
   color: rgb(var(--color-teched-midnight));
   background-color: rgb(var(--color-teched-sand) / 0.8);
   box-shadow: 0px 0px 5px rgb(var(--color-teched-sand));
