--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -7,6 +7,10 @@ header {
   width: 100%;
 }
 
+nav {
+  flex-direction: column;
+}
+
 nav a {
   color: white;
   font-weight: 300;
@@ -37,4 +41,27 @@ nav a:active {
 
 img {
   width: 200px;
+}
+
+@media (max-width: 400px) {
+  header {
+    flex-direction: column;
+  }
+
+  nav {
+    display: flex;
+    flex-direction: row;
+
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    font-size: 0.75em;
+  }
+  nav a {
+    border: 1px solid rgb(var(--color-teched-sand) / 0.25);
+    height: 80%;
+    padding: 0.75em;
+    align-items: center;
+  }
 }
