--- a/client/src/pages/reviewspage.css
+++ b/client/src/pages/reviewspage.css
@@ -10,25 +10,28 @@
   flex-direction: row;
 }
 
+.please-choose {
+  text-align: center;
+}
+
 .nav-sort-reviews {
   align-items: flex-start;
   justify-content: flex-start;
+  padding: 1em;
 
   border: 1px solid rgba(255, 255, 255, 0.25);
-  padding: 0.5em;
 
   background-color: rgb(var(--color-teched-midnight));
 }
 
 .reviews-all-wrapper {
   margin-top: 2em;
+  padding: 5em;
   padding-bottom: 8em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  gap: 1em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  grid-gap: 2.5em;
 }
 
 .grid {
@@ -36,7 +39,6 @@
 }
 
 .reviews-individual {
-  width: 80%;
   padding: 0.75em;
 
   grid-template-columns: repeat(2, 1fr);
@@ -45,6 +47,7 @@
   align-items: start;
 
   background-color: rgb(var(--color-teched-orange) / 0.9);
+  box-shadow: 0 2px 20px -5px rgba(0, 0, 0, 0.5);
 
   border-radius: 0.5em;
 }
@@ -59,6 +62,7 @@
   justify-content: center;
   padding-bottom: 0.25em;
 
+  font-size: 1.3em;
   font-weight: 400;
 
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -95,10 +99,23 @@
   padding-left: 5%;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 600px) {
   .nav-sort-reviews {
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
+    gap: 0.75em;
+    width: 90%;
+    height: min-content;
+
+    padding: 1em 00px 1em 0px;
+  }
+  .nav-sort-reviews a {
+    height: 40%;
+    padding: 1em;
+    background-color: rgb(var(--color-teched-orange) / 0.3);
+    margin: 0;
   }
   .review-user-trio {
     font-size: 0.75em;
@@ -110,5 +127,17 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     grid-auto-rows: minmax(1em, 4.5em);
     overflow: scroll;
+  }
+}
+@media (max-width: 335px) {
+  .nav-sort-reviews a {
+    padding: 0.2em;
+  }
+}
+
+@media (max-width: 1000px) {
+  .reviews-all-wrapper {
+    grid-template-columns: 1fr;
+    padding: 1.5em;
   }
 }
